<resources>
    <string name="app_name">EnglishClub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sessions">Мои смены</string>
    <string name="awards">Достижения</string>
    <string name="activities">Задания</string>
    <string name="news">Новости</string>
    <string name="nearest">Я еду</string>
    <string name="create_account"><u>У вас нет аккаунта? Создайте</u></string>
    <string name="sign_in_account"><u>У вас уже есть аккаунт? Войдите</u></string>
    <string name="users">Пользователи</string>
    <string name="nearest_sessions_admin">Ближайшие смены</string>
</resources>