<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sessionsFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:enabled="true"
        android:title="@string/sessions"/>

    <item
        android:id="@+id/awardsFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:enabled="true"
        android:title="@string/awards"/>

    <item
        android:id="@+id/activitiesFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:enabled="true"
        android:title="@string/activities"/>

    <item
        android:id="@+id/nearestSessionsFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:enabled="true"
        android:title="@string/nearest"/>

    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_news"
        android:enabled="true"
        android:title="@string/news"/>

</menu>