<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nearestSessionsFragmentAdmin"
        android:icon="@drawable/ic_nearest"
        android:enabled="true"
        android:title="Смены"/>

    <item
        android:id="@+id/reservationsFragment"
        android:icon="@drawable/ic_email"
        android:enabled="true"
        android:title="Записи"/>

    <item
        android:id="@+id/activitiesFragmentAdmin"
        android:icon="@drawable/ic_activites"
        android:enabled="true"
        android:title="@string/activities"/>

    <item
        android:id="@+id/usersFragment"
        android:icon="@drawable/ic_people"
        android:enabled="true"
        android:title="@string/users"/>

    <item
        android:id="@+id/newsFragmentAdmin"
        android:icon="@drawable/ic_news"
        android:enabled="true"
        android:title="@string/news"/>
</menu>